--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,6 +8,10 @@ $color-text-light-primary-active: #ffffff;
 $color-text-light-secondary-active: #c7b299;
 $color-text-links: #00bff3;
 
+// color-paggination
+$color-paggination: #f4f5f8;
+$color-paggination-hover: #f4f5f8;
+
 // color-text for light backgrounsds
 $color-text-dark-primary: #555555;
 $color-text-dark-secondary: #8c8c8c;
