--- a/scss/_aside.scss
+++ b/scss/_aside.scss
@@ -43,24 +43,5 @@
 }
 
 .ad__button {
-  width: 170px;
-  min-height: 50px;
-  border: none;
-  border-bottom: 2px solid $color-button-shadows;
-  border-radius: 3px;
-  background-color: $color-button-primary;
-  box-shadow: inset 0px -3px 0 0 $color-button-shadows;
-}
-.ad__button-text {
-  @extend %font-first-extrabold;
-  color: $color-text-light-primary;
-  object-fit: contain;
-  text-transform: uppercase;
-  font-size: 14px;
-  font-weight: 800;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.64;
-  letter-spacing: normal;
-  text-align: center;
+  @include button;
 }
