--- a/scss/_our-latest-projects.scss
+++ b/scss/_our-latest-projects.scss
@@ -1,7 +1,3 @@
-@import 'variables';
-@import 'zeroing';
-@import 'fonts';
-@import 'mixins';
 // ================================================== our-latsest-projects
 .our-latsest-projects {
   height: 1160px;
@@ -10,23 +6,18 @@
   padding: 80px 375px;
 
   &__container {
-    background: #9b6a6a;
+    // background: #9b6a6a;
     display: flex;
     flex-direction: column;
   }
   &__textbox {
-    background: #6699a8;
+    // background: #6699a8;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    &-title {
-      @include block-title;
-      @extend %font-first-semibold;
-      width: 100%;
-    }
     &-txt {
-      @include block-text;
-      @extend %font-second-light;
+      width: 65%;
+      margin-bottom: 40px;
     }
   }
   &__menubox {
@@ -60,23 +51,25 @@
   }
 
   &__picturebox {
-    background: red;
+    // background: red;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    margin: 0 -15px;
 
     &-item {
       background: gold;
-      width: 33.333%;
+      width: calc(33.333% - 30px);
+      margin: 40px 15px 30px 15px;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
 
-      &-pic {
-        background: blue;
-      }
+      // &-pic {
+      //   // background: blue;
+      // }
       &-title {
         background: blueviolet;
       }
@@ -94,5 +87,6 @@
   }
   &__button {
     background: aqua;
+    @include button;
   }
 }
