--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -69,6 +69,8 @@
 }
 
 // extends of the localy plugged fonts
+$font-main: 'raleway', 'arial', sans-serif;
+$font-secondary: 'montserrat', 'arial', sans-serif;
 
 %font-first-regular {
   font-family: 'raleway', 'arial', sans-serif;
