--- a/scss/_activities.scss
+++ b/scss/_activities.scss
@@ -1,34 +1,31 @@
 // ================================================== activities section
 .activities {
   height: 373px;
-  // border: 1px solid aqua;
   background-color: $color-icon-primary;
   display: flex;
-  .container {
-    border: 1px solid #000;
-    margin: auto;
-    width: 1166px;
-    height: 215px;
+  justify-content: center;
+  align-items: center;
+
+  &__wrapper {
     display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+
+    border: 1px solid #000;
+    margin: 0 auto;
+    height: 215px;
   }
   &__item {
-    // border: 1px solid #e80606;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
-    img {
+    &-img {
       display: block;
-      // fill: green;
-      // margin: 0 0 20px 0;
-      // &:hover {
-      //   fill: gold;
-      // }
     }
-    span {
-      @extend %font-first-semibold;
-      font-size: 22px;
+    &-title {
+      @include title($size: 22px);
       font-weight: 600;
       font-stretch: normal;
       font-style: normal;
@@ -37,7 +34,7 @@
       text-align: center;
       color: $color-text-dark-primary;
     }
-    p {
+    &-text {
       @extend %font-second-light;
       font-size: 14px;
       font-weight: 300;
